core/engine/tests/snapshots/engine__aml_0.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  breakdown:
    amber:
      "$serde_json::private::Number": "0"
    green:
      "$serde_json::private::Number": "3"
    red:
      "$serde_json::private::Number": "1"
  flags:
    eurSanctions: red
    globalSanctions: green
    merchantReputation: green
    transactionAmount: green
  overallFlag: red
trace:
  204af8f6-325f-41cc-a5bd-ee99905d8c1f:
    id: 204af8f6-325f-41cc-a5bd-ee99905d8c1f
    input:
      flags:
        eurSanctions: red
        globalSanctions: green
        merchantReputation: green
        transactionAmount: green
    name: Aggregator
    order:
      "$serde_json::private::Number": "6"
    output:
      breakdown:
        amber:
          "$serde_json::private::Number": "0"
        green:
          "$serde_json::private::Number": "3"
        red:
          "$serde_json::private::Number": "1"
      flags:
        eurSanctions: red
        globalSanctions: green
        merchantReputation: green
        transactionAmount: green
      overallFlag: red
    performance: "[perf]"
    traceData:
      log: []
  3187c4af-565f-482c-805f-9099e9d56fc1:
    id: 3187c4af-565f-482c-805f-9099e9d56fc1
    input:
      customer:
        address:
          city: Anytown
          country: USA
          state: CA
          street: 123 Main St
          zipCode: "12345"
        email: john.doe@example.com
        firstName: John
        id: "987654321"
        lastName: Doe
      merchant:
        category: Retail
        id: "567890123"
        location:
          country: RU
        name: SuperMart
        reputation:
          "$serde_json::private::Number": "0.81"
      transaction:
        amountUSD:
          "$serde_json::private::Number": "100.5"
        currency: EUR
        id: "123456789"
        status: pending
        timestamp: "2023-11-30T12:34:56Z"
    name: EUR Sanctions
    order:
      "$serde_json::private::Number": "2"
    output:
      flags:
        eurSanctions: red
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        merchant.location.country: RU
      rule:
        _id: ff990579-78ff-4a25-9706-eae402a26c4e
        "merchant.location.country[90adfc05-ffdf-490f-ab47-cede8dd899f3]": "\"RU\", \"NK\""
  57b828f3-e0ff-4e3a-9549-7dae4eeba55d:
    id: 57b828f3-e0ff-4e3a-9549-7dae4eeba55d
    input:
      customer:
        address:
          city: Anytown
          country: USA
          state: CA
          street: 123 Main St
          zipCode: "12345"
        email: john.doe@example.com
        firstName: John
        id: "987654321"
        lastName: Doe
      merchant:
        category: Retail
        id: "567890123"
        location:
          country: RU
        name: SuperMart
        reputation:
          "$serde_json::private::Number": "0.81"
      transaction:
        amountUSD:
          "$serde_json::private::Number": "100.5"
        currency: EUR
        id: "123456789"
        status: pending
        timestamp: "2023-11-30T12:34:56Z"
    name: Merchant Reputation
    order:
      "$serde_json::private::Number": "5"
    output:
      flags:
        merchantReputation: green
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        merchant.reputation:
          "$serde_json::private::Number": "0.81"
      rule:
        _id: e8a05a05-d7f7-4272-94a1-c5aa84b0feaf
        "merchant.reputation[c658ae97-99c8-46fe-bc3a-64c14ea8c475]": "(0.8..1.0]"
  71285ae0-45cf-4300-afe7-de39e0f81590:
    id: 71285ae0-45cf-4300-afe7-de39e0f81590
    input:
      breakdown:
        amber:
          "$serde_json::private::Number": "0"
        green:
          "$serde_json::private::Number": "3"
        red:
          "$serde_json::private::Number": "1"
      flags:
        eurSanctions: red
        globalSanctions: green
        merchantReputation: green
        transactionAmount: green
      overallFlag: red
    name: Response
    order:
      "$serde_json::private::Number": "7"
    output: ~
    performance: "[perf]"
    traceData: ~
  ac9cf968-98b2-4ba5-a481-28da1e32b649:
    id: ac9cf968-98b2-4ba5-a481-28da1e32b649
    input:
      customer:
        address:
          city: Anytown
          country: USA
          state: CA
          street: 123 Main St
          zipCode: "12345"
        email: john.doe@example.com
        firstName: John
        id: "987654321"
        lastName: Doe
      merchant:
        category: Retail
        id: "567890123"
        location:
          country: RU
        name: SuperMart
        reputation:
          "$serde_json::private::Number": "0.81"
      transaction:
        amountUSD:
          "$serde_json::private::Number": "100.5"
        currency: EUR
        id: "123456789"
        status: pending
        timestamp: "2023-11-30T12:34:56Z"
    name: Transaction Amount
    order:
      "$serde_json::private::Number": "4"
    output:
      flags:
        transactionAmount: green
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "7"
      reference_map:
        customer.tier: ~
        transaction.amountUSD:
          "$serde_json::private::Number": "100.5"
      rule:
        _id: 58cf804e-ad94-4ed6-99fe-8263ae8cf7cd
        "customer.tier[a713c7ef-1db6-4fa4-aca4-590c4092c742]": ""
        "transaction.amountUSD[360ba5d7-25b0-44ff-9cce-3f365634a42f]": ""
  df092198-208d-4526-82a2-2ff4359d9001:
    id: df092198-208d-4526-82a2-2ff4359d9001
    input: ~
    name: Request
    order:
      "$serde_json::private::Number": "0"
    output:
      customer:
        address:
          city: Anytown
          country: USA
          state: CA
          street: 123 Main St
          zipCode: "12345"
        email: john.doe@example.com
        firstName: John
        id: "987654321"
        lastName: Doe
      merchant:
        category: Retail
        id: "567890123"
        location:
          country: RU
        name: SuperMart
        reputation:
          "$serde_json::private::Number": "0.81"
      transaction:
        amountUSD:
          "$serde_json::private::Number": "100.5"
        currency: EUR
        id: "123456789"
        status: pending
        timestamp: "2023-11-30T12:34:56Z"
    performance: "[perf]"
    traceData: ~
  f7e19179-48b7-4d94-b085-ea3d6c9e829e:
    id: f7e19179-48b7-4d94-b085-ea3d6c9e829e
    input:
      customer:
        address:
          city: Anytown
          country: USA
          state: CA
          street: 123 Main St
          zipCode: "12345"
        email: john.doe@example.com
        firstName: John
        id: "987654321"
        lastName: Doe
      merchant:
        category: Retail
        id: "567890123"
        location:
          country: RU
        name: SuperMart
        reputation:
          "$serde_json::private::Number": "0.81"
      transaction:
        amountUSD:
          "$serde_json::private::Number": "100.5"
        currency: EUR
        id: "123456789"
        status: pending
        timestamp: "2023-11-30T12:34:56Z"
    name: Sanctions
    order:
      "$serde_json::private::Number": "1"
    output:
      customer:
        address:
          city: Anytown
          country: USA
          state: CA
          street: 123 Main St
          zipCode: "12345"
        email: john.doe@example.com
        firstName: John
        id: "987654321"
        lastName: Doe
      merchant:
        category: Retail
        id: "567890123"
        location:
          country: RU
        name: SuperMart
        reputation:
          "$serde_json::private::Number": "0.81"
      transaction:
        amountUSD:
          "$serde_json::private::Number": "100.5"
        currency: EUR
        id: "123456789"
        status: pending
        timestamp: "2023-11-30T12:34:56Z"
    performance: "[perf]"
    traceData:
      statements:
        - id: 13737427-cb8c-4c32-bde5-e49ef6fa03e0
        - id: aa630466-3bb1-45e3-9ae8-12eb57451f55
  fd8f6200-f236-4d00-859e-9a732e553176:
    id: fd8f6200-f236-4d00-859e-9a732e553176
    input:
      customer:
        address:
          city: Anytown
          country: USA
          state: CA
          street: 123 Main St
          zipCode: "12345"
        email: john.doe@example.com
        firstName: John
        id: "987654321"
        lastName: Doe
      merchant:
        category: Retail
        id: "567890123"
        location:
          country: RU
        name: SuperMart
        reputation:
          "$serde_json::private::Number": "0.81"
      transaction:
        amountUSD:
          "$serde_json::private::Number": "100.5"
        currency: EUR
        id: "123456789"
        status: pending
        timestamp: "2023-11-30T12:34:56Z"
    name: Global Sanctions
    order:
      "$serde_json::private::Number": "3"
    output:
      flags:
        globalSanctions: green
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "1"
      reference_map: {}
      rule:
        _id: 380eee74-94aa-4321-a673-878386dc3200
